changes to index

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -125,11 +125,16 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h2>currently...</h2>
 			<p><span class="hl">playing:</span> <a href="/vgs/style-savvy-styling-star/">style savvy styling star</a> + <a href="/vgs/cato/index.html">cato</a></p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
-			<p><span class="hl">watching:</span> the queen's gambit</p>
+			<p><span class="hl">watching:</span> one piece (live action)</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> remaking music page</p>
-			<p class="date">last updated on 14.sep.24</p>
+			<p class="date">last updated on 18.sep.24</p>
 
+		</div>
+
+		<div id="featured-page" class="box">
+			<h2>featured page</h2>
+			<a title="click to go to my journal!" href="/journal"><img src="!g/journal.jpg" alt="featured page" width="100%"></a>
 		</div>
 
 		<div id="piclog" class="box">
@@ -155,54 +160,6 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p>if you want to explore more personal sites beyond doqmeat.com, check out my <a href="/sites">button
 					wall</a> with tons of buttons from my neighbors and just overall sites that i enjoy visiting.</p>
 			<p>take care and come visit again someday (^・ω・^ )</p>
-		</div>
-
-		<div id="chat" class="box">
-			<h2>chatbox</h2>
-			<iframe src="https://www3.cbox.ws/box/?boxid=3527348&boxtag=lFAd4a" width="100%" height="81%" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
-		</div>
-
-		<div id="musicbox" class="box">
-			<h2>music player</h2>
-			<div id="musicplayer">
-				<div>
-					<marquee scrollamount="8" class="songtitle"></marquee>
-				</div>
-
-				<table class="controls">
-					<tr>
-						<td>
-							<div class="prev-track" onclick="prevTrack()"><i class="fas fa-backward"></i></div>
-						</td>
-						<td>
-							<div class="playpause-track" onclick="playpauseTrack()"><i class="fas fa-play"></i></div>
-						</td>
-						<td>
-							<div class="next-track" onclick="nextTrack()"><i class="fas fa-forward"></i></div>
-						</td>
-					</tr>
-				</table>
-
-				<div class="seeking">
-					<div class="current-time">00:00</div>
-
-					<input type="range" min="1" max="100" value="0" class="seek_slider" onchange="seekTo()">
-
-					<div class="total-duration">0:00</div>
-				</div>
-
-				<audio id="music" src=""></audio>
-			</div>
-			<details>
-				<summary>playlist</summary>
-				<ol>
-					<li>放課後、通学路。 (after school, on the way to school) - kinoue64</li>
-					<li>on top of the inaudible white key - siinamota</li>
-					<li> 溢れてる (overflow) - kinoue64
-					</li>
-					<li>999 - siinamota</li>
-				</ol>
-			</details>
 		</div>
 
 		<div id="comm" class="box">
@@ -348,6 +305,11 @@ feel free to look around for any help you need :) just don't be THAT person and 
 				<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting/lejlart-clouds.gif" alt="appledust clouds mini-clique"></a>
 			</div>
 			<!--	comm end div-->
+		</div>
+
+		<div id="chat" class="box">
+			<h2>chatbox</h2>
+			<iframe src="https://www3.cbox.ws/box/?boxid=3527348&boxtag=lFAd4a" width="100%" height="81%" allowtransparency="yes" allow="autoplay" frameborder="0" marginheight="0" marginwidth="0" scrolling="auto"></iframe>
 		</div>
 
 		<div id="widgets" class="box">
