added rym recomendation link cus i forgor

--- a/doqmeat/music/info.html
+++ b/doqmeat/music/info.html
@@ -33,7 +33,7 @@
 
 		<p>when it comes to <b>streaming</b> stuff, i use bandcamp or youtube preferably. if not, i use <a href="https://www.xmanagerapp.com/" target="_blank">this</a> on my phone :) if i enjoy an album or EP i'll try to get the <a title="my CD collection" href="cds.html" target="_blank">CD</a>. if not, i'll get it digitally.</p>
 
-		<p>feel free to send me a recommendation through <a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank">e-mail</a> or my <a href="" target="_blank" class="outlink">rate your music</a> ! i will gladly listen to it whenever i have some time. i love discovering new music <img src="/!g/pix/catroll.gif"></p>
+		<p>feel free to send me a recommendation through <a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank">e-mail</a> or my <a href="https://rateyourmusic.com/recommend/?rece=doqmeat" target="_blank" class="outlink">rate your music</a> ! i will gladly listen to it whenever i have some time. i love discovering new music <img src="/!g/pix/catroll.gif"></p>
 
 		<center><img src="/!g/deco/jermamusic.gif"></center>
 
