--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -176,6 +176,7 @@
 			<a href="https://skewbug.neocities.org/" target="_blank"><img src="!g/skewbug.gif" alt="skewbug"></a>
 			<a href="https://dear-j.neocities.org/" target="_blank"><img src="!g/dear-j.gif" alt="juano"></a>
 			<a href="https://catbyte.site" target="_blank"><img src="!g/catbyte.png" alt="catbyte"></a>
+			<a href="https://muttthecowcat.neocities.org/" target="_blank"><img src="!g/muttthecowcat.png" alt="muttthecowcat"></a>
 		</div>
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
 
