renamed books/ -> reading/ + minor update to the index

--- a/doqmeat/reading/index.html
+++ b/doqmeat/reading/index.html
@@ -12,25 +12,40 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
+	<style>
+		details {
+			display: inline;
+		}
+
+		summary {
+			display: inline;
+			cursor: help;
+		}
+	</style>
 </head>
 
 <body>
 	<h1>reading log</h1>
 	<h2>current</h2>
 	<ul>
-		<li>
+		<li>chainsaw man -- (ongoing)
 			<details>
-				<summary>chainsaw man -- 172/?</summary>fujimoto going to hell bro.
+				<summary>+</summary>fujimoto going to hell bro.
 			</details>
 		</li>
-		<li>the guy she was interested in wasn't a guy at all -- ?/?</li>
-		<li>bloodborne -- 13 / ???</li>
-		<li>villain -- ?/?</li>
+		<li>the guy she was interested in wasn't a guy at all -- (ongoing)</li>
 		<li>my cat is such a weirdo -- volume 1/3</li>
-		<li>company and private life -- up to date!</li>
+		<li>company and private life -- (ongoing)</li>
 	</ul>
+
+	<h2>shelved</h2>
+	<ul>
+		<li>bloodborne -- 13 / ???</li>
+	</ul>
+
 	<h2>finished</h2>
 	<ul>
+		<li>villain</li>
 		<li>mob psycho 100</li>
 		<li>blue</li>
 		<li>look back</li>
@@ -60,7 +75,7 @@
 		<li>ogi's summer break</li>
 	</ul>
 	<footer>
-		<b>last updated: 30.aug.24</b>
+		<b>last updated: 27.sep.24</b>
 		<br>
 		<a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a>
 	</footer>
