--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -133,6 +133,10 @@
 					<li>the haunting of hill house</li>
 					<li>your honor</li>
 					<li>steven universe</li>
+					<li>the rehearsal</li>
+					<li>one piece (live action)</li>
+					<li>grace & frankie</li>
+					<li>the queen's gambit</li>
 				</ul>
 			</details>
 
@@ -149,7 +153,7 @@
 	</main>
 
 	<footer>
-		<p><b>last updated: 31.aug.24</b></p>
+		<p><b>last updated: 27.sep.24</b></p>
 		<p> <a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a></p>
 		<p><b>credit:</b> <a href="/notebook/links/fonts.html">fonts</a> used: basiic, pink tape / body bg from madoka magica: rebellion</p>
 	</footer>
