--- a/doqmeat/collection/cats/index.html
+++ b/doqmeat/collection/cats/index.html
@@ -96,6 +96,7 @@
 
 		<!--column 3-->
 		<div class="column">
+			<img src="!g/jesse-cat.jpg" alt="jesse from breaking bad holding a cat">
 			<img src="!g/paldo-smoking.jpg">
 			<img src="!g/panko.jpg">
 			<img src="!g/sideeye.jpg">
@@ -136,7 +137,7 @@
 	<footer>
 		<img src="div1.gif" alt=""><img src="div.gif" alt=""><img src="div2.gif" alt="">
 		<br>
-		<b>last updated: 06.sep.24</b>
+		<b>last updated: 29.sep.24</b>
 		<br><br>
 		<b>credit:</b> page made with materials by <a href="http://tora7.ciao.jp" target="_blank">tora7.ciao.jp</a> / <a href="/notebook/links/fonts.html">fonts</a> used: cat paw, momo
 
