--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -50,6 +50,10 @@
 		<h3>all listening logs</h3>
 		<details>
 			<summary>if you're looking for a specific album or artist just hit that CTRL + F and search away :D <small>(updated every time i create a new page!)</small></summary>
+			<p><a href="2024/summer.html#4">TTYL</a> - loossemble</p>
+			<p><a href="2024/summer.html#3">homestuck vol. 1-4</a> - various artists</p>
+			<p><a href="2024/summer.html#2">seabed eden (french version)</a> - ichiko aoba &amp; pomme</p>
+			<p><a href="2024/summer.html#1">slash-&amp;-burn</a> - daoko</p>
 			<p><a href="2024/spring.html#5" target="parent">dall</a> - ARTMS</p>
 			<p><a href="2024/spring.html#4" target="parent">3rd desire [reve]</a> - kim woo seok</p>
 			<p><a href="2024/spring.html#3" target="parent">陽​の​か​け​ら</a> - inuha</p>
