some vgs logs + updated currently

--- a/doqmeat/vgs/fortnite/index.html
+++ b/doqmeat/vgs/fortnite/index.html
@@ -10,19 +10,7 @@
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 10,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 	<style>
 		body {
@@ -47,7 +35,6 @@
 			overflow: auto;
 			margin: 10px 0px;
 		}
-
 	</style>
 </head>
 
@@ -60,19 +47,7 @@
 		<div class="info"><b>genre/type: </b> battle royale, action, online</div>
 
 		<h4>logs</h4>
-
-		<p>i play this game way too fucking much!!!! well ever since i made this neocities i've been playing less actually... but i do enjoy this game a lot! especially with friends. im pretty average btw. i should mention somewhere in the gaming log index that i suck at video games. but i have my fun!</p>
-
-		<p>been playing on &amp; off since june 2018 with the introduction of chapter 1 season 5! honestly hate to admit it but <s>i am very invested in the lore of this game.... for a while they threw marvel and dc stuff in there which i mostly ignore because i really dont care. the lore is very interesting for me!</s></p>
-
-		<p><mark>i absolutely love some of the original skin designs of this game!</mark> they are so cool and inspiring to me. will probably make a tiny space for them here in the future</p>
-		<hr>
-		<details>
-			<summary>i made this edit of drift (kind of) dancing along side parsley onuma's <a title="youtube video. WARNING: contains graphic (gore, kinda gross tbh...) imagery" href="https://youtu.be/t0B6QJFJ0LM" target="_blank">corruption</a> (vocaloid song) and i need it saved somewhere so its going here</summary>
-			<video id="video" width="100%" controls>
-				<source src="https://files.catbox.moe/q8b15i.mp4" type="video/mp4">
-			</video>
-		</details>
+		<p><span class="date">02.oct.24</span>i have not played fortnite since december of last year, probably. i haven't had frequent wifi since january either way. but my distaste with the state of this game's company hasn't exactly gotten away either. i redownloaded the game recently hoping to be able to play some online games with my online besties. it's been such a while since i played something with them. but when opening up this game... i honestly just find it heart breaking to see what fortnite has become. this shit looks like the google play store when you open the game. that's horrible. i'm not gonna go into another rant because it's basically The Same Rant as before. but i guess i'm still wishing that fortnite was still my silly little online game instead of this greedy mess epic games has built. i am still sad about it.</p>
 		<hr id="1">
 		<p><span class="date">11.dec.23</span> gamers, i have A Few thoughts on fortnite as of late.</p>
 		<p>recently, fortnite added <b>3 new core game modes</b>: <i>lego fortnite</i> (open world survival), <i>rocket racing</i> (racing game), and <i>fortnite festival</i> (rhytm game that is basically a guitar hero look-a-like, understandably so since it is developed by <a title="wikipedia" href="https://en.wikipedia.org/wiki/Harmonix#Purchase_by_Epic_Games" target="_blank" class="outlink">harmonix</a>). i've been playing all of them and they are all pretty fun!! i've really liked playing them so far, specially the lego mode. but that is for another log...</p>
@@ -84,6 +59,21 @@
 		<p>i had mentioned previously in my logs that the lore of the game was very interesting to me. and it really was! fortnite has such a unique charm to it when it comes to the story (it once had) and its original characters. i was crazily invested. but nowadays it's very clear they Do Not care about the lore they once had going for fortnite. they still try! but their <b>constant</b> efforts of including collabs in the 'lore' of the game just because...? collab = money i guess?</p>
 		<p>it's just very frustrating to see as someone who got into the game because of this unique charm. the new game modes are all super fun and all. and you don't need to buy anything to enjoy the game. but it SHOWS that their priority with fortnite is just to make the most amount of money as possible. and it's a bit saddening to see.</p>
 
+		<hr>
+
+		<p><span class="date">jun 2023</span> i play this game way too fucking much!!!! well ever since i made this neocities i've been playing less actually... but i do enjoy this game a lot! especially with friends. im pretty average btw. i should mention somewhere in the gaming log index that i suck at video games. but i have my fun!</p>
+
+		<p>been playing on &amp; off since june 2018 with the introduction of chapter 1 season 5! honestly hate to admit it but <s>i am very invested in the lore of this game.... for a while they threw marvel and dc stuff in there which i mostly ignore because i really dont care. the lore is very interesting for me!</s></p>
+
+		<p><mark>i absolutely love some of the original skin designs of this game!</mark> they are so cool and inspiring to me. will probably make a tiny space for them here in the future</p>
+		<hr>
+		<details>
+			<summary>i made this edit of drift (kind of) dancing along side parsley onuma's <a title="youtube video. WARNING: contains graphic (gore, kinda gross tbh...) imagery" href="https://youtu.be/t0B6QJFJ0LM" target="_blank">corruption</a> (vocaloid song) and i need it saved somewhere so its going here</summary>
+			<video id="video" width="100%" controls>
+				<source src="https://files.catbox.moe/q8b15i.mp4" type="video/mp4">
+			</video>
+		</details>
+		<hr>
 		<h4>fav skins</h4>
 
 		<table style="width:100%">
