--- a/doqmeat/vgs/splatoon-2/index.html
+++ b/doqmeat/vgs/splatoon-2/index.html
@@ -25,6 +25,8 @@
 		<div class="info"><b>genre/type: </b>shooter, multiplayer</div>
 
 		<h3>logs</h3>
+		<p><span class="date">02.oct.24</span> been needing an Online Game Fix so i redownloaded splatoon 2 and been literally playing from the ground up cus i'm using my girlfriend's account (who has the nintendo online membership. i don't have that.) to be able to play. i dont care if it's $5 per month, i'm not paying for that shit.</p>
+		<hr>
 		<p><span class="date">14.apr.24</span> bought it around... 2021 i think... i loved this game but i think i simply just got burned out. never a ranked guy. single story mode was pretty cool but i didn't finish it either. maybe one day!</p>
 
 		<h4>screenshots</h4>
