--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -123,12 +123,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> <a href="/vgs/style-savvy-styling-star/">style savvy styling star</a> + <a href="/vgs/cato/index.html">cato</a></p>
+			<p><span class="hl">playing:</span> <a href="/vgs/style-savvy-styling-star/">style savvy styling star</a> + <a href="/vgs/cato/index.html">cato</a> + splatoon 2</p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
-			<p><span class="hl">watching:</span> nothing atm!</p>
+			<p><span class="hl">watching:</span> orange is the new black + ozumaki</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> fashion gallery page</p>
-			<p class="date">last updated on 27.sep.24</p>
+			<p><span class="hl">working on:</span> siinamota fansite + fashion gallery page</p>
+			<p class="date">last updated on 02.oct.24</p>
 
 		</div>
 
