--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -53,6 +53,7 @@
 		<h2>change log</h2>
 
 		<div id="log">
+			<li>02.oct.24: log: <a href="fortnite/index.html">fortnite</a> + <a href="splatoon-2/index.html">splatoon 2</a></li>
 			<li>07.sep.24: log: <a href="cato/index.html">cato</a></li>
 			<li>03.sep.24: added: <a href="style-savvy-styling-star/index.html">style savvy styling star</a></li>
 			<li>30.aug.24: log: <a href="style-savvy-trendsetters/index.html">style savvy trendsetters</a> + added: <a href="nintendogs-cats/index.html">nintendogs + cats</a></li>
