tripleS assemble24 listening log

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -104,6 +104,7 @@
 
   <div id="updates" class="box">
    <h3>updates</h3>
+   <p><b>05.oct.24</b> - debuting fall's listening log with tripleS' <a href="listening-log/2024/fall.html#2">assemble24</a></p>
    <p><b>21.sep.24</b> - music page revamp!</p>
    <p><b>02.sep.24</b> - new listening log: <i>TTYL</i></p>
    <p><b>01.sep.24</b> - updated featured song &amp; album</p>
@@ -111,8 +112,8 @@
 
   <div id="log" class="box">
    <h3>latest log...</h3>
-   <iframe src="listening-log/2024/summer.html" height="100%" width="100%" scrolling="no" name="listening-log"></iframe>
-   <a title="click to open listening log and continue reading!" href="listening-log/2024/summer.html" target="_blank"></a>
+   <iframe src="listening-log/2024/fall.html" height="100%" width="100%" scrolling="no" name="listening-log"></iframe>
+   <a title="click to open listening log and continue reading!" href="listening-log/2024/fall.html" target="_blank"></a>
   </div>
 
   <div id="featured" class="box">
