--- a/doqmeat/music/listening-log/index.html
+++ b/doqmeat/music/listening-log/index.html
@@ -33,6 +33,7 @@
 		<p>these will open on their own tab! listening logs body bg pic by <a href="https://unsplash.com/@juanster?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Juan Davila</a> on <a href="https://unsplash.com/photos/lake-under-blue-sky-during-daytime-P8PlK2nGwqA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
 
 		<h4>2024</h4>
+		<a href="2024/fall.html" target="_parent">fall</a>
 		<a href="2024/summer.html" target="_parent">summer</a>
 		<a href="2024/spring.html" target="_parent">spring</a>
 		<a href="2024/winter.html" target="_parent">winter</a>
