added some pixels

--- a/doqmeat/notebook/sitely/graphics.html
+++ b/doqmeat/notebook/sitely/graphics.html
@@ -40,7 +40,6 @@
 			border: 1px solid grey;
 			margin: 5px;
 		}
-
 	</style>
 </head>
 
@@ -194,6 +193,7 @@
 		<h2 id="pix">pixels</h2>
 
 		<h3 id="fav">favicons</h3>
+		<img src="/!g/pix/dress.gif">
 		<img src="/!g/pix/blog.gif">
 		<img src="/!g/pix/new2.gif">
 		<img src="/!g/pix/book.gif">
@@ -426,6 +426,7 @@
 		<img src="/!g/div/balloon.gif">
 		<img src="/!g/div/scissors.gif">
 		<img src="/!g/div/clothes.gif">
+		<img src="/!g/div/clothes2.gif">
 		<img src="/!g/div/squigglyrainbow.gif">
 		<img src="/!g/div/clovers4.gif">
 		<img src="/!g/div/vinered.gif">
