--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -176,6 +176,8 @@
 			<a href="https://skewbug.neocities.org/" target="_blank"><img src="!g/skewbug.gif" alt="skewbug"></a>
 			<a href="https://catbyte.site" target="_blank"><img src="!g/catbyte.png" alt="catbyte"></a>
 			<a href="https://muttthecowcat.neocities.org/" target="_blank"><img src="!g/muttthecowcat.png" alt="muttthecowcat"></a>
+			<a title="galissia" href="https://galissia.neocities.org" target="_blank"><img src="!g/galissia.gif" alt="galissia"></a>
+			<a title="raezroom" href="https://raezroom.neocities.org/" target="_blank"><img src="!g/raezroom.gif" alt="raezroom"></a>
 		</div>
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
 
@@ -394,7 +396,6 @@
 			<a title=" vulpix" href="https://ocha.cafe" target="_blank"><img src="!g/ocha.cafe.png" alt="ocha.cafe"></a>
 			<a title="maalused - has a very cool and mysterious vibe to it!" href="https://maalused.neocities.org" target="_blank"><img src="!g/maalused.gif"></a>
 			<a title="telle - nice site with interesting logs!" href="https://catcakes.neocities.org/" target="_blank"><img src="!g/catcakes.gif" alt="catcakes"></a>
-			<a title="galissia" href="https://galissa.neocities.org" target="_blank"><img src="!g/galissia.gif" alt="galissia"></a>
 		</div>
 
 		<p><a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> /
