minor update to journal index look

--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -48,7 +48,6 @@ v3 of journal started on 05.jul.24
 			<div id="nav">
 				<img align="right" src="!g/flower-b.gif" style="max-width: 100%;">
 				<h3>logs navigation</h3>
-				<a href="logs.html" target="log">all logs</a>
 				<details>
 					<summary>2024</summary>
 					<a href="2024/09.html" target="log">september</a>
@@ -82,7 +81,7 @@ v3 of journal started on 05.jul.24
 
 			<div id="pic">
 				<h3>credit</h3>
-				<p>pencil cursor from <a href="http://whimsical.heartette.net/" target="_blank">whimsical</a>, bg n deco graphics from <a href="http://sozaioukoku.fc2web.com" target="_blank">sozaioukoku</a>, weather icons from <a href="https://tora7.ciao.jp/" target="_blank">tora7.ciao.jp</a>, iframe links script from <a href="https://forum.melonland.net/index.php?topic=115" target="_blank">melonking</a>, butterfly pixel from <a href="https://sorahana.ciao.jp/" target="_blank">sorahana</a>, <a href="/notebook/links/fonts.html" target="_blank">fonts</a> used: gaegu, spirit</p>
+				<p>pencil cursor from <a href="http://whimsical.heartette.net/" target="_blank">whimsical</a>, deco graphics from <a href="http://sozaioukoku.fc2web.com" target="_blank">sozaioukoku</a>, weather icons from <a href="https://tora7.ciao.jp/" target="_blank">tora7.ciao.jp</a>, iframe links script from <a href="https://forum.melonland.net/index.php?topic=115" target="_blank">melonking</a>, butterfly pixel from <a href="https://sorahana.ciao.jp/" target="_blank">sorahana</a>, body bg from <a href="https://unsplash.com/photos/green-grass-field-during-daytime-cPaGBl8R_1M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">unsplash</a>, <a href="/notebook/links/fonts.html" target="_blank">fonts</a> used: gaegu, spirit</p>
 			</div>
 		</aside>
 
@@ -95,9 +94,9 @@ v3 of journal started on 05.jul.24
 
 	</div>
 
-	<div id="sticker"><a href="#" title="scroll to the top!"><img src="!g/pic.gif"></a></div>
+	<!-- <div id="sticker"><a href="#" title="scroll to the top!"><img src="!g/pic.gif"></a></div>
 
-	<div id="home"><a title="go back home?" href="/"><img src="!g/hanging.gif"></a></div>
+	<div id="home"><a title="go back home?" href="/"><img src="!g/hanging.gif"></a></div> -->
 </body>
 
 </html>
