new microblog post

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -34,6 +34,9 @@
 			<!-- <article>
 				<p><b></b> </p>
 			</article> -->
+			<article>
+				<p><b>09.oct.24 - 11am</b> still waiting for <i>look back</i> to get screenings in my theater... but other than that, i've been doing just fine! not much happening atm. i've been working on my fashion page and i love how it's looking so far! here's a sneak peek <button onclick="showPic('!g/241009-fashion.jpg','fashion page preview', 'need to take pics of my fav items and accesories')">241009-fashion.jpg</button></p>
+			</article>
 			<article id="240914">
 				<p><b>14.sep.24 - 1am</b> if <i>look back</i> won't be screening in my country, i think i will kill myself.</p>
 			</article>
