added villain screenshots

--- a/doqmeat/reading/index.html
+++ b/doqmeat/reading/index.html
@@ -34,18 +34,27 @@
 			</details>
 		</li>
 		<li>the guy she was interested in wasn't a guy at all -- (ongoing)</li>
-		<li>my cat is such a weirdo -- volume 1/3</li>
 		<li>company and private life -- (ongoing)</li>
 	</ul>
 
 	<h2>shelved</h2>
 	<ul>
+		<li>my cat is such a weirdo -- volume 1/3</li>
 		<li>bloodborne -- 13 / ???</li>
 	</ul>
 
 	<h2>finished</h2>
 	<ul>
-		<li>villain</li>
+		<li>villain
+			<details>
+				<summary>+</summary>
+				<p>idk man that was beautiful.</p>
+				<img src="!g/villain/1.jpg" width="40%" alt="screenshots of villain">
+				<br>
+				<img src="!g/villain/2.jpg" width="40%" alt="screenshots of villain">
+				<img src="!g/villain/3.jpg" width="40%" alt="screenshots of villain">
+			</details>
+		</li>
 		<li>mob psycho 100</li>
 		<li>blue</li>
 		<li>look back</li>
@@ -75,7 +84,7 @@
 		<li>ogi's summer break</li>
 	</ul>
 	<footer>
-		<b>last updated: 27.sep.24</b>
+		<b>last updated: 11.oct.24</b>
 		<br>
 		<a href="#">top</a> - <a href="/">home</a> - <a href="/sitemap">sitemap</a>
 	</footer>
